--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,4 +32,4 @@ jobs:
         run: npm install --global surge
         
       - name: Deploy
-        run: surge ./ https://panagracegreeting.surge.sh --token ${{ secrets.SURGE_TOKEN }}
+        run: surge ./ pana-grace.surge.sh --token ${{ secrets.SURGE_TOKEN }}
