--- a/.github/workflows/depolyWithSurge.yml
+++ b/.github/workflows/depolyWithSurge.yml
@@ -22,7 +22,7 @@ jobs:
 
       # Install NodeJS
       - name: Install NodeJS
-        run: actions/setup-node@v2.4.1
+        run: actions/setup-node@v2-beta
       
       # Install yarn
       - name: Install yarn
