--- a/.github/workflows/depolyWithSurge.yml
+++ b/.github/workflows/depolyWithSurge.yml
@@ -34,7 +34,9 @@ jobs:
       
       # Build react-app
       - name: Build React App with yarn
-        run: yarn build 
+        uses: borales/actions-yarn@v2.3.0
+        with:
+          cmd: build 
       
       # Install Surge
       - name: Install Surge
