--- a/.github/workflows/deploy-corona-tracker.yml
+++ b/.github/workflows/deploy-corona-tracker.yml
@@ -6,7 +6,7 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ 06/corona-tracker]
+    branches: [ '06/corona-tracker' ]
 
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
